# youcom-haystack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/haystack_integrations/components/websearch/youcom/: __init__.py  youcom_websearch.py
tests/: test_youcom_websearch.py
